Bug 425588 - When opening EXR the background in not set to black automatically anymore
Summary: When opening EXR the background in not set to black automatically anymore
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: File formats (other bugs)
Version First Reported In: nightly build (please specify the git hash!)
Platform: Microsoft Windows Other
: NOR normal
Target Milestone: ---
Assignee: Dmitry Kazakov
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2020-08-20 12:49 UTC by Dmitry Kazakov
Modified: 2020-08-20 21:12 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Dmitry Kazakov 2020-08-20 12:49:21 UTC
When loading EXR image we used to set the background to "Black" to display CandleGrass.exr-like images correctly. For some reason it doesn't work anymore. Krita loads EXRs with fully transparent background

The bug is reproducible in krita/4.3 branch af77ed57599cab0e65a3b5470af666513f7f7bf0
Comment 1 Halla Rempt 2020-08-20 14:00:16 UTC
I actually think you're going to need to do some archaeology here, because I remember seeing this change after a commit of yours that had, I think, to do with premultiplied alpha.
Comment 2 Dmitry Kazakov 2020-08-20 21:11:54 UTC
Git commit 7fc90d7614d20148bd78312acd1c94eab30e04c0 by Dmitry Kazakov.
Committed on 20/08/2020 at 21:11.
Pushed by dkazakov into branch 'master'.

Fix errorneously set background color in EXR loading code

M  +0    -2    plugins/impex/exr/exr_converter.cc

https://invent.kde.org/graphics/krita/commit/7fc90d7614d20148bd78312acd1c94eab30e04c0
Comment 3 Dmitry Kazakov 2020-08-20 21:12:19 UTC
Git commit 82c5624804f9df6309f8548892c01afad3f62d5c by Dmitry Kazakov.
Committed on 20/08/2020 at 21:12.
Pushed by dkazakov into branch 'krita/4.3'.

Fix errorneously set background color in EXR loading code

M  +0    -2    plugins/impex/exr/exr_converter.cc

https://invent.kde.org/graphics/krita/commit/82c5624804f9df6309f8548892c01afad3f62d5c