Fix errorneously set background color in EXR loading code

BUG:425588